# MedievalLand

./: .gitignore  .stackblitzrc  Anchor.toml  package.json
apps/web/: .env.local.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: shared.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/game/: PhaserGame.tsx
apps/web/src/game/chat/: ChatBubble.ts  ChatManager.ts  EmojiSystem.ts
apps/web/src/game/config/: constants.ts  gameConfig.ts  npcRegistry.ts  profileManager.ts
apps/web/src/game/entities/: CreatureEntity.ts  NPCSprite.ts  PlayerEntity.ts  ResourceNodeEntity.ts  SimpleSprite.ts  StructureEntity.ts
apps/web/src/game/multiplayer/: OnChainMultiplayer.ts
apps/web/src/game/progression/: achievementEngine.ts  achievementRegistry.ts  progressionBus.ts
apps/web/src/game/scenes/: BootScene.ts  PreloadScene.ts  UIScene.ts  WorldScene.ts
apps/web/src/game/solana/: instructions.ts  program.ts  (+1 more)
apps/web/src/hooks/: useGameEvents.ts
apps/web/src/ui/: BuildToolbar.tsx  ChatPanel.tsx  ErrorBoundary.tsx  HUD.tsx  InventoryHUD.tsx  MobileControls.tsx  NPCDialog.tsx  NPCPortrait.tsx  SolanaProvider.tsx  ToastStack.tsx  WalletBar.tsx  WalletSignBridge.tsx  ZoomControl.tsx  usePinchZoom.ts
programs/medieval-land/: Cargo.toml
programs/medieval-land/src/: lib.rs
programs/medieval-land/src/instructions/: building.rs  character.rs  item.rs  mod.rs  resource.rs  season.rs  vault.rs  world.rs
programs/medieval-land/src/state/: character_state.rs  item_state.rs  mod.rs  season_state.rs  world_state.rs
(+13 files in other folders)
