[package]
name = "medieval-land"
version = "0.1.0"
description = "MedievalLand on-chain program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "medieval_land"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
